src/yini_test/cases/golden/lenient/valid/strings/r-prefix-lowercase.yini
@yini

^ Strings
key = r"value"
