src/yini_test/cases/golden/lenient/invalid/strings/multiline-non-triple-quoted.yini
@yini

^ Strings
key = "line one
line two"
